Import QtIvi plugin

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -52,3 +52,7 @@ endif()
 if(Qt53DRender_FOUND AND Qt53DExtras_FOUND)
   add_subdirectory(qt3dinspector)
 endif()
+
+if(Qt5IviCore_FOUND)
+  add_subdirectory(qtivi)
+endif()
