Build the QtIvi UI also if we don't find QtIvi itself
That should enable it by default in the QtCreator build for example, while
QtIvi is only actually needed on the target.

--- a/plugins/qtivi/CMakeLists.txt
+++ b/plugins/qtivi/CMakeLists.txt
@@ -1,8 +1,10 @@
 # probe plugin
-gammaray_add_plugin(gammaray_qtivi JSON gammaray_qtivi.json SOURCES qtivisupport.cpp qtivipropertymodel.cpp
-                    qtivipropertyoverrider.cpp)
-target_include_directories(gammaray_qtivi SYSTEM PRIVATE ${Qt5IviCore_PRIVATE_INCLUDE_DIRS})
-target_link_libraries(gammaray_qtivi gammaray_core Qt5::IviCore)
+if(Qt5IviCore_FOUND)
+    gammaray_add_plugin(gammaray_qtivi JSON gammaray_qtivi.json SOURCES qtivisupport.cpp qtivipropertymodel.cpp
+                        qtivipropertyoverrider.cpp)
+    target_include_directories(gammaray_qtivi SYSTEM PRIVATE ${Qt5IviCore_PRIVATE_INCLUDE_DIRS})
+    target_link_libraries(gammaray_qtivi gammaray_core Qt5::IviCore)
+endif()
 
 # ui part
 if(GAMMARAY_BUILD_UI)
