Allow to explicitly disable multi-probe builds

--- a/multibuild/CMakeLists.txt
+++ b/multibuild/CMakeLists.txt
@@ -27,6 +27,7 @@ ExternalProject_Add(
 
   CMAKE_ARGS
     -DCMAKE_BUILD_TYPE=${_build_type}
+    -DGAMMARAY_MULTI_BUILD=OFF
     -DGAMMARAY_PROBE_ONLY_BUILD=ON
     -DGAMMARAY_INSTALL_QT_LAYOUT=${GAMMARAY_INSTALL_QT_LAYOUT}
     -DGAMMARAY_BUILD_UI=${GAMMARAY_BUILD_UI}
