CMake: Simplify adding C/CXXFLAGS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 endif()
 
+include(CheckCCompilerFlag)
 include(CheckCXXCompilerFlag)
 include(CheckCXXSymbolExists)
 include(CheckIncludeFiles)
@@ -183,13 +184,29 @@ endif()
 #
 # Compiler & linker settings
 #
+function(append_if condition value)
+  if (${condition})
+    foreach(variable ${ARGN})
+      set(${variable} "${${variable}} ${value}" PARENT_SCOPE)
+    endforeach(variable)
+  endif()
+endfunction()
+
+macro(add_flag_if_supported flag name)
+  check_c_compiler_flag("-Werror ${flag}" "C_SUPPORTS_${name}")
+  append_if("C_SUPPORTS_${name}" "${flag}" CMAKE_C_FLAGS)
+  check_cxx_compiler_flag("-Werror ${flag}" "CXX_SUPPORTS_${name}")
+  append_if("CXX_SUPPORTS_${name}" "${flag}" CMAKE_CXX_FLAGS)
+endmacro()
+
 add_compiler_export_flags()
 if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-  check_cxx_compiler_flag(-Wunused-but-set-variable HAVE_GXX_UNUSED_BUT_SET)
-  check_cxx_compiler_flag(-Wlogical-op HAVE_GXX_LOGICAL_OP)
-  check_cxx_compiler_flag(-Wsizeof-pointer-memaccess HAVE_GXX_POINTER_MEMACCESS)
-  check_cxx_compiler_flag(-Wreorder HAVE_GXX_REORDER)
-  check_cxx_compiler_flag(-Wformat-security HAVE_GXX_FORMAT_SECURITY)
+  add_flag_if_supported(-Wunused-but-set-variable UNUSED_BUT_SET)
+  add_flag_if_supported(-Wlogical-op LOGICAL_OP)
+  add_flag_if_supported(-Wsizeof-pointer-memaccess POINTER_MEMACCESS)
+  add_flag_if_supported(-Wreorder REORDER)
+  add_flag_if_supported(-Wformat-security FORMAT_SECURITY)
+
   check_cxx_compiler_flag(-std=gnu++0x HAVE_GXX_GNUXX11)
   check_cxx_compiler_flag(-std=c++0x HAVE_GXX_CXX11)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated -Wextra -Woverloaded-virtual -Winit-self -Wmissing-include-dirs -Wunused -Wno-div-by-zero -Wundef -Wpointer-arith -Wmissing-noreturn -Werror=return-type -Wswitch")
@@ -197,21 +214,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
   elseif(HAVE_GXX_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-  endif()
-  if(HAVE_GXX_UNUSED_BUT_SET)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wunused-but-set-variable")
-  endif()
-  if(HAVE_GXX_LOGICAL_OP)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wlogical-op")
-  endif()
-  if(HAVE_GXX_POINTER_MEMACCESS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsizeof-pointer-memaccess")
-  endif()
-  if(HAVE_GXX_REORDER)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wreorder")
-  endif()
-  if(HAVE_GXX_FORMAT_SECURITY)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wformat -Wformat-security")
   endif()
   if(MINGW)
     # mingw will error out on the crazy casts in probe.cpp without this
