--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -9,6 +9,7 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
   set(gammaray_quickinspector_shared_srcs
         quickinspectorinterface.cpp
         quickitemgeometry.cpp
+        quickoverlay.cpp
         materialextension/materialextensioninterface.cpp
       )
 
