--- a/GammaRayConfig.cmake.in
+++ b/GammaRayConfig.cmake.in
@@ -22,5 +22,9 @@ set(GAMMARAY_STATIC_PROBE @GAMMARAY_STATIC_PROBE@)
 set(GAMMARAY_LIBRARY_TYPE @GAMMARAY_LIBRARY_TYPE@)
 set(GAMMARAY_PLUGIN_TYPE @GAMMARAY_PLUGIN_TYPE@)
 
+if(NOT GAMMARAY_OUTPUT_PREFIX)
+  set(GAMMARAY_OUTPUT_PREFIX ${PROJECT_BINARY_DIR})
+endif()
+
 include("${CMAKE_CURRENT_LIST_DIR}/GammaRayTarget.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/GammaRayMacros.cmake")
