Move QuickItemGeometry init code to its own class
Task-Id: KDEND-108

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -12,11 +12,11 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
         materialextension/materialextensioninterface.cpp
       )
 
-  add_library(gammaray_quickinspector_shared STATIC ${gammaray_quickinspector_shared_srcs})
-  target_link_libraries(gammaray_quickinspector_shared gammaray_common Qt5::Gui)
-  set_target_properties(gammaray_quickinspector_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
-
   include_directories(SYSTEM ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
+
+  add_library(gammaray_quickinspector_shared STATIC ${gammaray_quickinspector_shared_srcs})
+  target_link_libraries(gammaray_quickinspector_shared gammaray_common Qt5::Gui Qt5::Quick)
+  set_target_properties(gammaray_quickinspector_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
   set(gammaray_quickinspector_srcs
     quickinspector.cpp
