Add a central bookkeeper for the QMetaObjects
QMetaObjects are accessed in various parts of the codebase, and all
these parts may access a deleted object. This patch adds a central
registry for the QMetaObjects, which can be used to check if a
given QMetaObject can be dereferenced without worrying or not.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,6 +3,7 @@ set(gammaray_srcs
 
   aggregatedpropertymodel.cpp
   metaobject.cpp
+  metaobjectregistry.cpp
   metaobjecttreemodel.cpp
   metaobjectrepository.cpp
   metaproperty.cpp
