--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,7 +431,13 @@ if(NOT CMAKE_BUILD_TYPE MATCHES "^[Rr]el")
   set(GAMMARAY_PROBE_ABI_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 endif()
 
-add_definitions(-DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -DQT_NO_CAST_TO_ASCII -DQT_NO_URL_CAST_FROM_STRING)
+add_definitions(
+    -DQT_USE_FAST_CONCATENATION
+    -DQT_USE_FAST_OPERATOR_PLUS
+    -DQT_NO_CAST_TO_ASCII
+    -DQT_NO_URL_CAST_FROM_STRING
+)
+
 # disable QT_STRICT_ITERATORS on the Qt5+Windows combo
 # see: https://bugreports.qt-project.org/browse/QTBUG-29608
 if(NOT (Qt5Core_FOUND AND WIN32))
