Minor: More CMake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,8 @@ if(MSVC)
     set(BAD_CXX_MESSAGE "MSVC 2010 or higher")
   endif()
 endif()
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-  if(${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 3.1.0)
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.1.0)
     set(BAD_CXX_MESSAGE "Clang v3.1.0 or higher")
   endif()
 endif()
@@ -200,7 +200,7 @@ macro(add_flag_if_supported flag name)
 endmacro()
 
 add_compiler_export_flags()
-if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   add_flag_if_supported(-Wunused-but-set-variable UNUSED_BUT_SET)
   add_flag_if_supported(-Wlogical-op LOGICAL_OP)
   add_flag_if_supported(-Wsizeof-pointer-memaccess POINTER_MEMACCESS)
@@ -236,7 +236,7 @@ endif()
 
 # linker flags
 if(NOT ECM_ENABLE_SANITIZERS AND (CMAKE_SYSTEM_NAME MATCHES Linux OR CMAKE_SYSTEM_NAME STREQUAL GNU))
-  if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--fatal-warnings -Wl,--no-undefined -lc ${CMAKE_SHARED_LINKER_FLAGS}")
     set(CMAKE_MODULE_LINKER_FLAGS "-Wl,--fatal-warnings -Wl,--no-undefined -lc ${CMAKE_MODULE_LINKER_FLAGS}")
   endif()
