Pass -Wno-inconsistent-missing-override for Qt<5.5
Anything below will give us tons of warnings because Qt itself did not
use 'override' consistently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,6 +286,11 @@ if(Qt5Core_FOUND)
   )
   find_package(Qt5Scxml 5.8 NO_MODULE QUIET)
 
+  if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND Qt5Core_VERSION VERSION_LESS 5.5)
+    # disable warnings about inconsistent usage of 'override' specifier for Qt <5.5
+    # only starting with 5.5 Qt started to use 'override' throughout the code base
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-inconsistent-missing-override")
+  endif()
   if (Qt5Core_VERSION VERSION_GREATER 5.7)
     # Qt 5.8 is the first minor version to use nullptr more broadly
     # With versions below Qt might lots of warnings for -Wzero-as-null-pointer-constant, e.g.:
