Fix RPATH on macOS
Task-Id: #305

--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 if(APPLE) # DYLD_INSERT_LIBRARIES only works with real shared libraries, not modules
   add_library(gammaray_probe SHARED ${gammaray_probe_srcs})
   if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
-    set_target_properties(gammaray_probe PROPERTIES INSTALL_RPATH "@loader_path/../../../Frameworks")
+    set_target_properties(gammaray_probe PROPERTIES INSTALL_RPATH "@loader_path/../../../../Frameworks")
   endif()
 else()
   add_library(gammaray_probe ${GAMMARAY_PLUGIN_TYPE} ${gammaray_probe_srcs})
