--- a/multibuild/CMakeLists.txt
+++ b/multibuild/CMakeLists.txt
@@ -33,6 +33,7 @@ ExternalProject_Add(
     -DGAMMARAY_BUILD_UI=${GAMMARAY_BUILD_UI}
     -DGAMMARAY_OUTPUT_PREFIX=${CMAKE_BINARY_DIR}
     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
+    -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}
     -DLIB_SUFFIX=${LIB_SUFFIX}
 )
 
