--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -50,6 +50,7 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
       quickitemdelegate.cpp
       quickitemtreewatcher.cpp
       quickscenepreviewwidget.cpp
+      quickoverlaylegend.cpp
 
       materialextension/materialextensionclient.cpp
       materialextension/materialtab.cpp
