--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -420,7 +420,7 @@ target_link_libraries(toolmanagertest gammaray_ui)
 add_test(NAME toolmanagertest COMMAND toolmanagertest)
 endif()
 
-if(NOT GAMMARAY_PROBE_ONLY_BUILD)
+if(NOT GAMMARAY_PROBE_ONLY_BUILD AND NOT OSX_ASAN_WORKAROUND)
     add_executable(earlyexittest earlyexittest.cpp)
     target_include_directories(earlyexittest PRIVATE ${CMAKE_BINARY_DIR}/launcher)
     target_link_libraries(earlyexittest gammaray_core gammaray_launcher ${QT_QTTEST_LIBRARIES})
