--- a/launcher/ui/CMakeLists.txt
+++ b/launcher/ui/CMakeLists.txt
@@ -38,6 +38,8 @@ target_link_libraries(gammaray_launcher_ui_internal
   gammaray_ui
 )
 
+install(TARGETS gammaray_launcher_ui_internal EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
+
 set(gammaray_launcher_ui_srcs main.cpp)
 # TODO we don't need all the class icons here, so split the qrc file accordingly
 qt4_add_resources(gammaray_launcher_ui_srcs ${CMAKE_SOURCE_DIR}/resources/gammaray.qrc)
@@ -54,6 +56,26 @@ gammaray_embed_info_plist(gammaray-launcher ${CMAKE_CURRENT_SOURCE_DIR}/Info.pli
 set_target_properties(gammaray-launcher PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/${LIBEXEC_INSTALL_DIR}"
 )
+
+set(gammaray_launcher_dialog_srcs launcherdialog.cpp)
+add_library(gammaray_launcher_dialog SHARED ${gammaray_launcher_dialog_srcs})
+target_link_libraries(gammaray_launcher_dialog
+  ${QT_QTGUI_LIBRARIES}
+  gammaray_common
+  gammaray_launcher_ui_internal
+)
+
+install(TARGETS gammaray_launcher_dialog EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
+generate_export_header(gammaray_launcher_dialog)
+
+ecm_generate_pri_file(BASE_NAME GammaRayLauncherDialog
+                    LIB_NAME gammaray_launcher_dialog
+                    DEPS "core gui GammaRayCommon GammaRayLauncher"
+                    FILENAME_VAR PRI_FILENAME
+                    INCLUDE_INSTALL_DIR ${INCLUDE_INSTALL_DIR})
+
+install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
+
 
 install(TARGETS gammaray-launcher DESTINATION ${LIBEXEC_INSTALL_DIR})
 
