EarlyExitTest: Fix issues with ASAN under linux32
Use an ASAN-enabled target so the preload injector works for it. For
some reasons there's no such issue under Linux64.

Introduce a little executable mimicing the Unix 'sleep' utility. Bonus:
We can now safely use this one also on Windows, where 'sleep' is only
available when having the GNU utilities installed...

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -420,6 +420,11 @@ target_link_libraries(toolmanagertest gammaray_ui)
 add_test(NAME toolmanagertest COMMAND toolmanagertest)
 endif()
 
+add_executable(sleep sleep.cpp)
+target_link_libraries(sleep
+  ${QT_QTCORE_LIBRARIES}
+)
+
 if(NOT GAMMARAY_PROBE_ONLY_BUILD AND NOT OSX_ASAN_WORKAROUND)
     add_executable(earlyexittest earlyexittest.cpp)
     target_include_directories(earlyexittest PRIVATE ${CMAKE_BINARY_DIR}/launcher)
