Refactor the decorations properties
This will the be the place to customize the decorations rendering.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -406,6 +406,7 @@ set(quickinspectortest_srcs
   ../probe/hooks.cpp
   ../plugins/quickinspector/quickinspectorinterface.cpp
   ../plugins/quickinspector/quickitemgeometry.cpp
+  ../plugins/quickinspector/quickoverlay.cpp
     $<TARGET_OBJECTS:modeltestobj>
 )
 qt4_add_resources(quickinspectortest_srcs quickinspectortest.qrc)
