Add launcher test for the style injector too

--- a/tests/targets/CMakeLists.txt
+++ b/tests/targets/CMakeLists.txt
@@ -4,3 +4,8 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/testlib)
 
 add_executable(minimalcoreapplication minimalcoreapplication.cpp)
 target_link_libraries(minimalcoreapplication ${QT_QTCORE_LIBRARIES})
+
+if(Qt5Widgets_FOUND OR QT_QTGUI_FOUND)
+    add_executable(minimalwidgetapplication minimalwidgetapplication.cpp)
+    target_link_libraries(minimalwidgetapplication ${QT_QTGUI_LIBRARIES})
+endif()
