--- a/plugins/qmlsupport/CMakeLists.txt
+++ b/plugins/qmlsupport/CMakeLists.txt
@@ -11,6 +11,7 @@ set(gammaray_qmlsupport_srcs
   qmltypeextension.cpp
   qmlbindingextension.cpp
   qmlbindingmodel.cpp
+  qmlbindingnode.cpp
 )
 gammaray_add_plugin(gammaray_qmlsupport JSON gammaray_qmlsupport.json SOURCES ${gammaray_qmlsupport_srcs})
 target_include_directories(gammaray_qmlsupport SYSTEM PRIVATE ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
